<resources>
    <string name="app_name">PawPal 1.0</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment2">fragment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="catogory">Catogory</string>
    <string name="paw">Paw</string>
    <string name="medical">Medical</string>
    <string name="profile">Profile</string>
    <string name="catagory">catagory</string>
    <string name="checkup">checkup</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="dog_food">Dog Food</string>
    <string name="dog_food1">Dog Food</string>
    <string name="cat_food">Cat Food</string>
    <string name="cat_food1">Cat Food</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="pharmacy1">Pharmacy</string>
    <string name="litters_and_supplies">Litters and Supplies</string>
    <string name="litters_and_supplies1">Litters and Supplies</string>
    <string name="grooming">Grooming</string>
    <string name="grooming1">Grooming</string>
    <string name="toys">Toys</string>
    <string name="toys1">Toys</string>
    <string name="popular_items">Popular Items</string>
    <string name="item_1">Item 1</string>
    <string name="dog_food2">Dog food</string>
    <string name="item_2">Item 2</string>
    <string name="litter_box">Litter Box</string>
    <string name="item_3">Item 3</string>
    <string name="cat_food2">Cat Food</string>
    <string name="item_4">Item 4</string>
    <string name="pet_sofa">Pet Sofa</string>
    <string name="item_5">Item 5</string>
    <string name="pet_leash">Pet Leash</string>
    <string name="item_6">Item 6</string>
    <string name="dog_bone">Dog Bone</string>
    <string name="product_image">product_image</string>
    <string name="item_image">Product Image</string>
    <string name="review_count">%1$d reviews</string>
    <string name="sophia_granger">Sophia Granger</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="name">Name:</string>
    <string name="quantity">quantity:</string>
    <string name="price">price:</string>
    <string name="view_cart">view cart</string>
    <string name="Mike">Sophia Granger</string>

    <!-- Other strings -->
    <string-array name="time_slots_array">
        <item>10:00 AM - 11:00 AM</item>
        <item>11:00 AM - 12:00 PM</item>
        <item>12:00 PM - 01:00 PM</item>
        <item>01:00 PM - 02:00 PM</item>
        <item>02:00 PM - 03:00 PM</item>
        <item>03:00 PM - 04:00 PM</item>
        <item>04:00 PM - 05:00 PM</item>
    </string-array>


    <string name="cart">Cart</string>
    <string name="rupee">₹</string>
    <string name="logo_content_description">App logo</string>
    <string name="amount_hint">Enter amount</string>
    <string name="googlepay_button_content_description">Google Pay button</string>
    <string name="pedigree">Pedigree</string>
    <string name="_1500">₹1500</string>
    <string name="whiskas">Whiskas</string>
    <string name="_1999">₹1999</string>
    <string name="vetplus_coatex">Vetplus Coatex</string>
    <string name="_5000">₹5000</string>
    <string name="cat_litter">Cat Litter</string>
    <string name="_800">₹800</string>
    <string name="checkout">Checkout</string>
    <string name="view_orders">View Orders</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>